# Pink-Audio-Player

./: .gitignore  CMakeLists.txt  Doxyfile  LibraryClass.cpp  LibraryClass.h  MetaInfo.cpp  MetaInfo.h  PAP_en_GB.ts  Player.cpp  Player.h  Player.ui  PlayingDelegate.cpp  PlayingDelegate.h  PlaylistManager.cpp  PlaylistManager.h  PrefsDialog.cpp  PrefsDialog.h  PrefsDialog.ui  README.md  VMedia.cpp  VMedia.h  main.cpp  res.qrc
docs/html/: _c_make_lists_8txt.html  _library_class_8cpp.html  _library_class_8cpp__incl.map  _library_class_8cpp__incl.md5  _library_class_8cpp_source.html  _library_class_8h.html  _library_class_8h__dep__incl.map  _library_class_8h__dep__incl.md5  _library_class_8h__incl.map  _library_class_8h__incl.md5  _library_class_8h_source.html  _player_8cpp.html  _player_8cpp__incl.map  _player_8cpp__incl.md5  _player_8cpp_source.html  _player_8h.html  _player_8h__dep__incl.map  _player_8h__dep__incl.md5  _player_8h__incl.map  _player_8h__incl.md5  _player_8h_source.html  _playing_delegate_8cpp.html  _playing_delegate_8cpp__incl.map  _playing_delegate_8cpp__incl.md5  _playing_delegate_8cpp_source.html  _playing_delegate_8h.html  _playing_delegate_8h__dep__incl.map  _playing_delegate_8h__dep__incl.md5  _playing_delegate_8h__incl.map  _playing_delegate_8h__incl.md5  _playing_delegate_8h_source.html  _playlist_manager_8cpp.html  _playlist_manager_8cpp__incl.map  _playlist_manager_8cpp__incl.md5  _playlist_manager_8cpp_source.html  _playlist_manager_8h.html  _playlist_manager_8h__dep__incl.map  _playlist_manager_8h__dep__incl.md5  _playlist_manager_8h__incl.map  _playlist_manager_8h__incl.md5  (+97 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+20 more)
img/: pap.icns
